# urdu-digit

./: .gitignore  LICENSE  PKGBUILD  README.md  aur-info.py  aur_info.py  setup.cfg  urdu_digit
aur/: PKGBUILD
pip/: setup.cfg  setup.py
urdu-digit/: .gitignore  digit.py
