[metadata]
name = urdu
version = 0.1.5
author = siphr
author_email = pypi@techtum.dev
description = Converts English digits to Urdu digits.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.techtum.dev
project_urls =
    Bug Tracker = https://github.com/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
py_modules = urdu
python_requires = >=3.6

[options.packages.find]
where = urdu
