[metadata]
name = urdu_digit
version = 0.0.14
author = siphr
author_email = pypi@techtum.dev
description = Converts English digits to Urdu digits.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.techtum.dev
project_urls =
    Bug Tracker = https://github.com/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
py_modules = urdu_digit
python_requires = >=3.6
