[metadata]
name = urdu_digit
version = 0.0.17
author = siphr
author_email = pypi@techtum.dev
description = Converts English digits to Urdu digits.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.techtum.dev/work-urdu-digit-211001.html
license = MIT
project_urls =
    Bug Tracker = https://github.com/siphr/urdu-digit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
py_modules = urdu_digit
python_requires = >=3.6
